dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Atoms.h)
AM_INIT_AUTOMAKE(mavosxwm, 0.2.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.
PKG_CHECK_MODULES(XFT, xft)
PKG_CHECK_MODULES(GLIB, glib-2.0)

dnl Checks for header files.
AC_HEADER_STDC
AC_PATH_XTRA

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
